Hardcode things
