# grassroots-backend/openAPI.json
@@ -215,6 +215,25 @@
         "required": ["rowsSkipped", "rowsTotal"],
         "type": "object"
       },
+      "RoleResponseDTO": {
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "name": {
+            "type": "string"
+          },
+          "permissions": {
+            "items": {
+              "enum": ["VIEW_CONTACTS", "MANAGE_CONTACTS", "MANAGE_USERS"],
+              "type": "string"
+            },
+            "type": "array"
+          }
+        },
+        "required": ["id", "name", "permissions"],
+        "type": "object"
+      },
       "UserDTO": {
         "properties": {
           "displayName": {
@@ -811,6 +830,38 @@
           }
         },
         "tags": ["Organizations"]
+      }
+    },
+    "/roles": {
+      "get": {
+        "operationId": "RolesController_findAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/RoleResponseDTO"
+                  },
+                  "type": "array"
+                }
+              }
+            },
+            "description": ""
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationErrorOutDTO"
+                }
+              }
+            },
+            "description": "Validation failed"
+          }
+        },
+        "tags": ["Roles"]
       }
     },
     "/users": {
